<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="ExtraText">
        <EditText
            android:id="@+id/entername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toppings"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginBottom="24dp"/>
            <CheckBox
                android:id="@+id/whippedcream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="Whipped cream"
                android:textSize="16sp"
                android:paddingLeft="24dp"/>
            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="Chocolate"
                android:textSize="16sp"
                android:paddingLeft="24dp"/>
    <TextView
        android:id="@+id/txtqty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginTop="8dp">
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/add"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="8dp"
            android:onClick="increment"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberorder"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8sp"
            android:layout_marginTop="14dp"/>
        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/minus"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginLeft="8dp"
            android:onClick="decrement"/>
      </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:text="@string/ordersummary"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginBottom="16sp"/>
        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            android:text="@string/price"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Orderbuttn"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"/>

    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
